// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rectangle 1`] = `
<span
  class="s-NxxsQ6qi78tX"
  style="width: 200px; height: 25px; --background: var(--base-dark); --light: var(--base);"
/>
`;

exports[`Square 1`] = `
<span
  class="s-NxxsQ6qi78tX"
  style="width: 50px; height: 50px; --background: var(--base-dark); --light: var(--base);"
/>
`;
